# SICore

./: .gitignore
Core/CUDA/: CMakeLists.txt  build.sh  gemm.cu  gemm_cute.cuh  gemm_cute2.cuh  gemm_kernel6.cuh  gemm_kernels.cuh  ncu.sh
Include/: ptx_common.h
